ghost/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghost-admin-headers
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: "none"

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghost-admin-redirect
spec:
  redirectRegex:
    regex: ^https://blog-admin\.trap\.jp/(\?.*)?$
    replacement: https://blog-admin.trap.jp/ghost
    permanent: false
